@@ -546,6 +546,7 @@ CommandsStruct mechcommands[] = {
     {1, "CHOP [R | L | B] [<TARGET-ID>]", "Chops target with a sword",
 	mech_sword},
     {1, "CLUB [<TARGET-ID>]", "Clubs a target with a tree", mech_club},
+    {1, "MACE [<TARGET-ID>]", "Maces your target", mech_mace},
     {1, "SAW [<TARGET-ID>]", "Saws a target with a Dual Saw", mech_saw},    
     {1, "KICK [R | L] [<TARGET-ID>]", "Kicks a target", mech_kick},
     {1, "TRIP [R | L] [<TARGET-ID>]", "Trips a target mech", mech_trip},
